--- a/gui/package.json
+++ b/gui/package.json
@@ -17,6 +17,7 @@
         "test": "jest"
     },
     "dependencies": {
+        "@emotion/cache": "latest",
         "@emotion/css": "^11.9.0",
         "@emotion/react": "^11.9.0",
         "@emotion/server": "^11.4.0",
@@ -46,13 +47,13 @@
     },
     "devDependencies": {
         "@mui/codemod": "^5.8.5",
-        "ts-loader": "^9.3.1",
         "@next/bundle-analyzer": "^12.2.0",
         "@types/fs-extra": "^9.0.13",
         "@types/js-cookie": "^3.0.1",
         "@types/json2csv": "^5.0.3",
         "@types/node": "^17.0.24",
         "@types/react": "^18.0.5",
-        "@types/tmp": "^0.2.3"
+        "@types/tmp": "^0.2.3",
+        "ts-loader": "^9.3.1"
     }
 }
