--- a/shared/package.json
+++ b/shared/package.json
@@ -7,6 +7,12 @@
         "build": "tsc",
         "lint": "cross-env NODE_ENV=development eslint src",
         "lint:fix": "npm run lint -- --fix",
-        "lint:production": "cross-env NODE_ENV=production eslint src"
+        "lint:production": "cross-env NODE_ENV=production eslint src",
+        "test": "jest"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.4.0",
+        "jest": "^29.4.3",
+        "ts-jest": "^29.0.5"
     }
 }
