--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,6 +3,7 @@
         { "path": "../shared" }
     ],
     "compilerOptions": {
+        "sourceMap": true,
         "moduleResolution": "node",
         "module": "commonjs",
         "lib": ["es2020", "DOM"],
