--- a/gui/package.json
+++ b/gui/package.json
@@ -41,7 +41,7 @@
         "react-dnd": "^16.0.0",
         "react-dnd-html5-backend": "^16.0.0",
         "react-dom": "^18.0.0",
-        "react-spring": "^9.4.5",
+        "stable-hash": "^0.0.3",
         "swr": "^1.3.0",
         "tmp": "^0.2.1"
     },
